<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="PRG_GEM1_DIFF_PUMP" Id="{7641916e-925e-4304-add8-c14da3930767}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_GEM1_DIFF_PUMP
VAR
	rMaxBackingPressure : REAL := 0.7;//Torr
	bInit:BOOL:=TRUE;
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[If (bInit) THEN
	bInit := FALSE;
	//GEM1_PTM_10.M_SetPowerScale(15);
	//GEM1_PTM_20.M_SetPowerScale(15);
END_IF

(*Gauges*)
USG_PIN(sNetId:='172.21.88.138.1.1' , nPort:=851 , sVarName:='GVL_Devices.SL1L0_POWER_PIN_01',iWatchdog:=Main.iWatchdog,IG=> );
USG_GCC(sNetId:='172.21.88.138.1.1' , nPort:=851 , sVarName:='GVL_Devices.SL1L0_POWER_GCC_01',iWatchdog:=Main.iWatchdog,IG=> );

GEM1_GPI_10(PG=>);
GEM1_GCC_10(PG:=GEM1_GPI_10.PG,IG=>);
GEM1_GPI_20(PG=>);
GEM1_GCC_20(PG:=GEM1_GPI_20.PG,IG=>);
GEM1_GPI_30(PG=>);
GEM1_GCC_30(PG:=GEM1_GPI_30.PG,IG=>);
GEM1_GPI_50(PG=>);
GEM1_GCC_50(PG:=GEM1_GPI_50.PG,IG=>);
GEM1_GPI_11(PG=>);
GEM1_GPI_31(PG=>);
GEM1_GPI_51(PG=>);

(*VALVES*)
(*Aperture valve may open when Detector and Attenuator N2 valves are closed. Override provided *)
 (* to Include PMPS ILK with the EXTILK bit*)
(*apperture valves*)

GEM1_VGC_10(i_stUSG := USG_GCC.IG, i_stDSG:= GEM1_GCC_10.IG,i_xDis_DPIlk := FALSE, i_xEPS_OK := TRUE,
		i_xPMPS_OK := TRUE, i_xExt_OK := NOT (USG_GCC.bError), i_xOverrideMode := xGEM1OverrideMode,i_xReset := ,
		io_fbFFHWO :=g_FastFaultOutput1,i_sDevName:= 'EM1L0:GEM:VGC:10',fbArbiter:=g_fbArbiter,i_nTransitionRootID:=1100);
GEM1_VGC_20(i_stUSG := GEM1_GCC_10.IG, i_stDSG:= GEM1_GCC_20.IG,i_xDis_DPIlk := TRUE, i_xEPS_OK := TRUE,
		i_xPMPS_OK := TRUE, i_xExt_OK := xGEM1_AperturesOpnOK, i_xOverrideMode := xGEM1OverrideMode,i_xReset := , i_xIsAperture:= TRUE ,
		io_fbFFHWO :=g_FastFaultOutput1,i_sDevName:= 'EM1L0:GEM:VGC:20',fbArbiter:=g_fbArbiter,i_nTransitionRootID:=1200);
GEM1_VGC_30(i_stUSG := GEM1_GCC_20.IG, i_stDSG:= GEM1_GCC_30.IG,i_xDis_DPIlk := TRUE, i_xEPS_OK := TRUE,
		i_xPMPS_OK := TRUE, i_xExt_OK := xGEM1_AperturesOpnOK, i_xOverrideMode := xGEM1OverrideMode,i_xReset := , i_xIsAperture:= TRUE ,
		io_fbFFHWO :=g_FastFaultOutput1,i_sDevName:= 'EM1L0:GEM:VGC:30',fbArbiter:=g_fbArbiter,i_nTransitionRootID:=1300);
GEM1_VGC_40(i_stUSG := GEM1_GCC_30.IG, i_stDSG:= GEM1_GCC_30.IG,i_xDis_DPIlk := TRUE, i_xEPS_OK := TRUE,
		i_xPMPS_OK := TRUE, i_xExt_OK := xGEM1_AperturesOpnOK, i_xOverrideMode := xGEM1OverrideMode,i_xReset := , i_xIsAperture:= TRUE, 
		io_fbFFHWO :=g_FastFaultOutput1,i_sDevName:= 'EM1L0:GEM:VGC:40',fbArbiter:=g_fbArbiter,i_nTransitionRootID:=1400);
GEM1_VGC_50(i_stUSG := GEM1_GCC_50.IG, i_stDSG:= GEM1_GCC_50.IG,i_xDis_DPIlk := TRUE, i_xEPS_OK := TRUE,
		i_xPMPS_OK := TRUE, i_xExt_OK := xGEM1_AperturesOpnOK, i_xOverrideMode := xGEM1OverrideMode,i_xReset := , i_xIsAperture:= TRUE ,
		io_fbFFHWO :=g_FastFaultOutput1,i_sDevName:= 'EM1L0:GEM:VGC:50',fbArbiter:=g_fbArbiter,i_nTransitionRootID:=1500);
GEM1_VGC_60(i_stUSG := GEM1_GCC_50.IG, i_stDSG:= GEM1_GCC_50.IG,i_xDis_DPIlk := TRUE, i_xEPS_OK := TRUE,
		i_xPMPS_OK := TRUE, i_xExt_OK := xGEM1_AperturesOpnOK, i_xOverrideMode := xGEM1OverrideMode,i_xReset := , i_xIsAperture:= TRUE ,
		io_fbFFHWO :=g_FastFaultOutput1,i_sDevName:= 'EM1L0:GEM:VGC:60',fbArbiter:=g_fbArbiter,i_nTransitionRootID:=1600);		
GEM1_VGC_70(i_stUSG := GEM1_GCC_50.IG, i_stDSG:= GEM1_GCC_50.IG,i_xDis_DPIlk := TRUE, i_xEPS_OK := TRUE,
		i_xPMPS_OK := TRUE, i_xExt_OK := xGEM1_AperturesOpnOK, i_xOverrideMode := xGEM1OverrideMode,i_xReset := , i_xIsAperture:= TRUE ,
		io_fbFFHWO:=g_FastFaultOutput1,i_sDevName:= 'EM1L0:GEM:VGC:70',fbArbiter:=g_fbArbiter,i_nTransitionRootID:=1700);

(*Turbo Isolation Valves*)
 GEM1_VRC_10(i_xExtILK_OK := F_TurboGateValve_ILK(GEM1_PTM_10.iq_stPtm,GEM1_GPI_10.PG) AND GEM1_PTM_10.iq_stPtm.eState = pumpRUNNING ,i_xOverrideMode := xGEM1OverrideMode);
 GEM1_VRC_20(i_xExtILK_OK := F_TurboGateValve_ILK(GEM1_PTM_20.iq_stPtm,GEM1_GPI_20.PG) AND GEM1_PTM_20.iq_stPtm.eState = pumpRUNNING,i_xOverrideMode := xGEM1OverrideMode);
 GEM1_VRC_30(i_xExtILK_OK := F_TurboGateValve_ILK(GEM1_PTM_30.iq_stPtm,GEM1_GPI_30.PG) AND GEM1_PTM_30.iq_stPtm.eState = pumpRUNNING,i_xOverrideMode := xGEM1OverrideMode);
 GEM1_VRC_50(i_xExtILK_OK := F_TurboGateValve_ILK(GEM1_PTM_50.iq_stPtm,GEM1_GPI_50.PG) AND GEM1_PTM_50.iq_stPtm.eState = pumpRUNNING,i_xOverrideMode := xGEM1OverrideMode);
 
		
(*Turbo vent valves NO*) //Deprecated
//GEM1_VVC_20(i_stPTM :=GEM1_PTM_20.iq_stPtm); 
//GEM1_VVC_30(i_stPTM :=GEM1_PTM_30.iq_stPtm);
//GEM1_VVC_50(i_stPTM :=GEM1_PTM_50.iq_stPtm);
(*This part was added to Close all the Turbo's NO vent valves, These valves are capped off, and wont be in use*)
//GEM1_VVC_20.M_Close(TRUE);
//GEM1_VVC_10.M_Close(TRUE);
//GEM1_VVC_50.M_Close(TRUE);


(*Turbo Isolation valves*)
(*GEM1_PTM_10.i_xExtILKOk := F_TurboExtILK_NO(GEM1_PTM_10.iq_stPtm, GEM1_GPI_11.PG,
						GEM1_GPI_10.PG,GEM1_VVC_20.q_stValve,GEM1_PRO_20.iq_stPFO);
GEM1_PTM_10(i_stGauge:=GEM1_GPI_11.PG,i_rMaxBackingPressure :=rMaxBackingPressure);*)
GEM1_PTM_10( i_xExtILKOk := F_TurboExtILKLogic_2(GEM1_PTM_10.iq_stPtm, GEM1_GPI_11.PG,
						GEM1_GPI_10.PG,GEM1_PRO_20.iq_stPFO));
(*GEM1_PTM_20.i_xExtILKOk := F_TurboExtILK_NO(GEM1_PTM_20.iq_stPtm,BackingGauge:= GEM1_GPI_11.PG,
						InletGauge:=GEM1_GPI_20.PG,GEM1_VVC_20.q_stValve,GEM1_PRO_20.iq_stPFO);
GEM1_PTM_20(i_stGauge:=GEM1_GPI_11.PG,i_rMaxBackingPressure :=rMaxBackingPressure);*)
GEM1_PTM_20( i_xExtILKOk := F_TurboExtILKLogic_2(GEM1_PTM_20.iq_stPtm, GEM1_GPI_11.PG,
						GEM1_GPI_20.PG,GEM1_PRO_20.iq_stPFO));
GEM1_PTM_30(i_xExtILKOK:=F_TurboExtILKLogic_2(GEM1_PTM_30.iq_stPtm, GEM1_GPI_31.PG,
						GEM1_GPI_30.PG,GEM1_PRO_30.iq_stPFO));
GEM1_PTM_50(i_xExtILKOK:=F_TurboExtILKLogic_2(GEM1_PTM_50.iq_stPtm, GEM1_GPI_51.PG,
						GEM1_GPI_50.PG,GEM1_PRO_50.iq_stPFO));

(*Roughing pumps*)
GEM1_PRO_20(xExtIlk:= TRUE, TurboIsOn:= (GEM1_PTM_10.iq_stPtm.q_RunDO OR GEM1_PTM_20.iq_stPtm.q_RunDO));
GEM1_PRO_30(xExtIlk:= TRUE, TurboIsOn:= GEM1_PTM_30.iq_stPtm.q_RunDO);
GEM1_PRO_50(xExtIlk:= TRUE, TurboIsOn:= GEM1_PTM_50.iq_stPtm.q_RunDO); 
		
]]></ST>
    </Implementation>
    <LineIds Name="PRG_GEM1_DIFF_PUMP">
      <LineId Id="3" Count="86" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>